adding product view from admin panel

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -29,11 +29,12 @@
                     {{this.name}}
                 </td>
                 <td class="px-6 py-4">
-                    {{this.category}}
+                    {{this.description}}
+                    
                 </td>
 
                 <td class="px-6 py-4">
-                   {{this.description}}
+                   {{this.price}}
                 </td>
                 <td class="px-6 py-4">
                     <img src="{{this.image}}" class="w-12 h-12" alt="">
@@ -46,3 +47,5 @@
 </div>
 
 </section>
+
+<script src="https://cdn.tailwindcss.com"></script>
