done view users page product

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -14,7 +14,7 @@
                     Description    
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Category
+                    Price v 
                 </th>
                 <th scope="col" class="px-6 py-3">
                     Image
@@ -37,7 +37,7 @@
                    {{this.price}}
                 </td>
                 <td class="px-6 py-4">
-                    <img src="{{this.image}}" class="w-12 h-12" alt="">
+                    <img src="/product-images/{{this._id}}.jpg" class="w-12 h-12" alt="">
                 </td>
             </tr>
             {{/each}}
