--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -8,18 +8,18 @@
         {{!--Products start here --}}
         {{#each products}}
         <div class="group relative outline outline-1 outline-black rounded-md p-8 py-0 pb-4">
-            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                <img src="/product-images/{{this._id}}.jpg" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80 mt-8 mb-3">
+                <img src="/product-images/{{this._id}}.jpg" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full ">
             </div>
             <div class="mt-4 flex justify-between">
                 <div>
                     <h3 class="text-sm text-gray-700">
-                    <a href="#">
+                    <a href="#" class="text-xl  font-bold">
                         <span aria-hidden="true" class="absolute inset-0"></span>
                         {{this.name}}
                     </a>
                     </h3>
-                    <p class="mt-1 text-sm text-gray-500">{{this.price}}</p>
+                    <p class="mt-1 text-sm  font-bold">${{this.price}}</p>
 
                 </div>
                 
@@ -30,7 +30,7 @@
 
 
       
-      <!-- More products... -->
+      
     </div>
     
 </div>
